docs: Add a section on recommended JVM options